// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components /Button Button in desktop screen 1`] = `
<div
  className="MuiBox-root-svhlhv MuiBox-root-7"
>
  <div
    className="MuiBox-root-svhlhv MuiBox-root-8"
  >
    <button
      className="MuiButtonBase-root-131ecbq MuiButton-root-1oszgoi MuiButton-contained-1akh65 MuiButton-containedPrimary-z7qkqq"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-10pi21n"
      >
        Hower
      </span>
      <span
        className="MuiTouchRipple-root-zm8jaa"
      />
    </button>
  </div>
  <div
    className="MuiBox-root-svhlhv MuiBox-root-9"
  >
    <button
      className="MuiButtonBase-root-131ecbq MuiButtonBase-disabled-1v65d5t MuiButton-root-1oszgoi MuiButton-contained-1akh65 MuiButton-containedPrimary-z7qkqq MuiButton-disabled-1v65d5t"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
      type="button"
    >
      <span
        className="MuiButton-label-10pi21n"
      >
        Disabled
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-svhlhv MuiBox-root-10"
  >
    <button
      className="MuiButtonBase-root-131ecbq MuiButton-root-1oszgoi MuiButton-contained-1akh65 MuiButton-containedSecondary-9s0mbq"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-10pi21n"
      >
        Cancel
      </span>
      <span
        className="MuiTouchRipple-root-zm8jaa"
      />
    </button>
  </div>
  <div
    className="MuiBox-root-svhlhv MuiBox-root-11"
  >
    <button
      className="MuiButtonBase-root-131ecbq MuiButton-root-1oszgoi MuiButton-text-c3bwcw MuiButton-textPrimary-1rm8cpj"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-10pi21n"
      >
        Back
      </span>
      <span
        className="MuiTouchRipple-root-zm8jaa"
      />
    </button>
  </div>
  <div
    className="MuiBox-root-svhlhv MuiBox-root-12"
  >
    <button
      className="MuiButtonBase-root-131ecbq MuiButton-root-1oszgoi MuiButton-contained-1akh65 MuiButton-containedPrimary-z7qkqq MuiButton-fullWidth-179vbl1"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-10pi21n"
      >
        Full Width
      </span>
      <span
        className="MuiTouchRipple-root-zm8jaa"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Components /Button Button in phone screen 1`] = `
<div
  style={
    Object {
      "width": "425px",
    }
  }
>
  <div
    className="MuiBox-root-svhlhv MuiBox-root-1"
  >
    <div
      className="MuiBox-root-svhlhv MuiBox-root-2"
    >
      <button
        className="MuiButtonBase-root-131ecbq MuiButton-root-1oszgoi MuiButton-contained-1akh65 MuiButton-containedPrimary-z7qkqq"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-10pi21n"
        >
          Hower
        </span>
        <span
          className="MuiTouchRipple-root-zm8jaa"
        />
      </button>
    </div>
    <div
      className="MuiBox-root-svhlhv MuiBox-root-3"
    >
      <button
        className="MuiButtonBase-root-131ecbq MuiButtonBase-disabled-1v65d5t MuiButton-root-1oszgoi MuiButton-contained-1akh65 MuiButton-containedPrimary-z7qkqq MuiButton-disabled-1v65d5t"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
        type="button"
      >
        <span
          className="MuiButton-label-10pi21n"
        >
          Disabled
        </span>
      </button>
    </div>
    <div
      className="MuiBox-root-svhlhv MuiBox-root-4"
    >
      <button
        className="MuiButtonBase-root-131ecbq MuiButton-root-1oszgoi MuiButton-contained-1akh65 MuiButton-containedSecondary-9s0mbq"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-10pi21n"
        >
          Cancel
        </span>
        <span
          className="MuiTouchRipple-root-zm8jaa"
        />
      </button>
    </div>
    <div
      className="MuiBox-root-svhlhv MuiBox-root-5"
    >
      <button
        className="MuiButtonBase-root-131ecbq MuiButton-root-1oszgoi MuiButton-text-c3bwcw MuiButton-textPrimary-1rm8cpj"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-10pi21n"
        >
          Back
        </span>
        <span
          className="MuiTouchRipple-root-zm8jaa"
        />
      </button>
    </div>
    <div
      className="MuiBox-root-svhlhv MuiBox-root-6"
    >
      <button
        className="MuiButtonBase-root-131ecbq MuiButton-root-1oszgoi MuiButton-contained-1akh65 MuiButton-containedPrimary-z7qkqq MuiButton-fullWidth-179vbl1"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-10pi21n"
        >
          Full Width
        </span>
        <span
          className="MuiTouchRipple-root-zm8jaa"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components /TextFieldForm Examples 1`] = `
<div
  className="MuiBox-root-svhlhv MuiBox-root-20"
>
  <div
    className="MuiBox-root-svhlhv MuiBox-root-21"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-1lb2h3b MuiFormControl-marginNormal-16ii0gj MuiTextField-root-mb0tze"
      >
        <label
          className="MuiFormLabel-root-n2ir1z MuiFormLabel-error-1lfkslp MuiInputLabel-error-f7uxcl MuiInputLabel-root-u7lks3 MuiInputLabel-formControl-aiu6j8 MuiInputLabel-animated-1574dhs MuiInputLabel-shrink-3h2s6v"
          data-shrink={true}
        >
          Error
        </label>
        <div
          className="MuiInputBase-root-91sko6 MuiOutlinedInput-root-9m06ak MuiInputBase-error-1lfkslp MuiOutlinedInput-error-ehh1pj MuiInputBase-formControl-1c83dgn"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-nlmqld MuiOutlinedInput-notchedOutline-myv9y8"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-soq3fn"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={true}
            className="MuiInputBase-input-1dda7s5 MuiOutlinedInput-input-1lq6gfk"
            defaultValue="Standard Error"
            disabled={false}
            name="field-with-error"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
        <p
          className="MuiFormHelperText-root-16u8wp6 MuiFormHelperText-contained-1bc4o3e MuiFormHelperText-error-1lfkslp"
        >
          This is an error message
        </p>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-svhlhv MuiBox-root-22"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-1lb2h3b MuiFormControl-marginNormal-16ii0gj MuiTextField-root-mb0tze"
      >
        <label
          className="MuiFormLabel-root-n2ir1z MuiInputLabel-root-u7lks3 MuiInputLabel-formControl-aiu6j8 MuiInputLabel-animated-1574dhs MuiInputLabel-shrink-3h2s6v"
          data-shrink={true}
        >
          Filled
        </label>
        <div
          className="MuiInputBase-root-91sko6 MuiOutlinedInput-root-9m06ak MuiInputBase-formControl-1c83dgn"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-nlmqld MuiOutlinedInput-notchedOutline-myv9y8"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-soq3fn"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-1dda7s5 MuiOutlinedInput-input-1lq6gfk"
            defaultValue="test*iov"
            disabled={false}
            name="field-filled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-svhlhv MuiBox-root-23"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-1lb2h3b MuiFormControl-marginNormal-16ii0gj MuiTextField-root-mb0tze"
      >
        <label
          className="MuiFormLabel-root-n2ir1z MuiFormLabel-disabled-1v65d5t MuiInputLabel-disabled-1v65d5t MuiInputLabel-root-u7lks3 MuiInputLabel-formControl-aiu6j8 MuiInputLabel-animated-1574dhs MuiInputLabel-shrink-3h2s6v"
          data-shrink={true}
        >
          Disabled
        </label>
        <div
          className="MuiInputBase-root-91sko6 MuiOutlinedInput-root-9m06ak MuiInputBase-disabled-1v65d5t MuiOutlinedInput-disabled-1v65d5t MuiInputBase-formControl-1c83dgn"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-nlmqld MuiOutlinedInput-notchedOutline-myv9y8"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-soq3fn"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-1dda7s5 MuiOutlinedInput-input-1lq6gfk MuiInputBase-disabled-1v65d5t MuiOutlinedInput-disabled-1v65d5t"
            defaultValue="Disabled input"
            disabled={true}
            name="standard-disabled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-svhlhv MuiBox-root-24"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-1lb2h3b MuiFormControl-marginNormal-16ii0gj MuiTextField-root-mb0tze"
      >
        <label
          className="MuiFormLabel-root-n2ir1z MuiInputLabel-root-u7lks3 MuiInputLabel-formControl-aiu6j8 MuiInputLabel-animated-1574dhs MuiInputLabel-shrink-3h2s6v"
          data-shrink={true}
        >
          Empty
        </label>
        <div
          className="MuiInputBase-root-91sko6 MuiOutlinedInput-root-9m06ak MuiInputBase-formControl-1c83dgn"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-nlmqld MuiOutlinedInput-notchedOutline-myv9y8"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-soq3fn"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-1dda7s5 MuiOutlinedInput-input-1lq6gfk"
            disabled={false}
            name="standard-with-placeholder"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="IOV or wallet address"
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Components /forms Form 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root-1lb2h3b MuiFormControl-marginNormal-16ii0gj MuiTextField-root-mb0tze"
  >
    <label
      className="MuiFormLabel-root-n2ir1z MuiInputLabel-root-u7lks3 MuiInputLabel-formControl-aiu6j8 MuiInputLabel-animated-1574dhs MuiInputLabel-shrink-3h2s6v"
      data-shrink={true}
    >
      Unique Identifier
    </label>
    <div
      className="MuiInputBase-root-91sko6 MuiOutlinedInput-root-9m06ak MuiInputBase-formControl-1c83dgn"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root-nlmqld MuiOutlinedInput-notchedOutline-myv9y8"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend-soq3fn"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-1dda7s5 MuiOutlinedInput-input-1lq6gfk"
        disabled={false}
        name="uniqueIdentifier"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Unique Identifier"
        required={false}
        type="text"
      />
    </div>
  </div>
  <button
    className="MuiButtonBase-root-131ecbq MuiButtonBase-disabled-1v65d5t MuiButton-root-1oszgoi MuiButton-contained-1akh65 MuiButton-containedPrimary-z7qkqq MuiButton-disabled-1v65d5t"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="-1"
    type="submit"
  >
    <span
      className="MuiButton-label-10pi21n"
    >
      Submit
    </span>
  </button>
  <pre>
    {}
  </pre>
</form>
`;

exports[`Storyshots Components Images 1`] = `
<img
  alt="Iov Logo"
  className="Hook-root-z8j3qi"
  src="iov-logo.png"
/>
`;

exports[`Storyshots Components Layout 1`] = `
<div
  className="MuiBox-root-svhlhv MuiBox-root-13"
>
  <h4
    className="MuiTypography-root-1sxknfi MuiTypography-h4-nwn03d MuiTypography-colorPrimary-qfkzyz Hook-inline-42z04s"
  >
    Title
  </h4>
  <h4
    className="MuiTypography-root-1sxknfi MuiTypography-h4-nwn03d Hook-inline-42z04s"
  >
     
    storybook
  </h4>
  <div
    className="MuiBox-root-svhlhv MuiBox-root-14"
  >
    <h6
      className="MuiTypography-root-1sxknfi MuiTypography-h6-d7gx89"
    >
      Layout content
    </h6>
  </div>
  <div
    className="MuiBox-root-svhlhv MuiBox-root-15"
  >
    <img
      alt="IOV logo"
      className="Hook-root-z8j3qi"
      src="iov-logo.png"
    />
  </div>
</div>
`;

exports[`Storyshots Components Switch 1`] = `
Array [
  <div
    className="MuiBox-root-svhlhv MuiBox-root-16"
  >
    <label
      className="MuiFormControlLabel-root-gncncm"
    >
      <span
        className="MuiSwitch-root-1r26fum"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root-131ecbq MuiIconButton-root-twwo1r MuiPrivateSwitchBase-root-1fy6mq0 MuiSwitch-switchBase-1njpanh MuiSwitch-colorPrimary-18cp1gd"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-fojb9y"
          >
            <span
              className="MuiSwitch-icon-4n1pz8"
            />
            <input
              className="MuiPrivateSwitchBase-input-1kb1x60"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
          <span
            className="MuiTouchRipple-root-zm8jaa"
          />
        </span>
        <span
          className="MuiSwitch-bar-tufax1"
        />
      </span>
      <span
        className="MuiTypography-root-1sxknfi MuiTypography-body2-d30tto MuiFormControlLabel-label-10nbetz"
      >
        With label
      </span>
    </label>
  </div>,
  <div
    className="MuiBox-root-svhlhv MuiBox-root-17"
  >
    <label
      className="MuiFormControlLabel-root-gncncm"
    >
      <span
        className="MuiSwitch-root-1r26fum"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root-131ecbq MuiIconButton-root-twwo1r MuiPrivateSwitchBase-root-1fy6mq0 MuiSwitch-switchBase-1njpanh MuiSwitch-colorPrimary-18cp1gd"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-fojb9y"
          >
            <span
              className="MuiSwitch-icon-4n1pz8"
            />
            <input
              className="MuiPrivateSwitchBase-input-1kb1x60"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
          <span
            className="MuiTouchRipple-root-zm8jaa"
          />
        </span>
        <span
          className="MuiSwitch-bar-tufax1"
        />
      </span>
      <span
        className="MuiTypography-root-1sxknfi MuiTypography-body2-d30tto MuiFormControlLabel-label-10nbetz"
      />
    </label>
  </div>,
]
`;

exports[`Storyshots Components Tooltip 1`] = `
Array [
  <div
    className="MuiBox-root-svhlhv MuiBox-root-18"
  >
    <div
      className="Hook-container-576ype"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="Hook-root-z8j3qi"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
  <div
    className="MuiBox-root-svhlhv MuiBox-root-19"
  >
    <p
      className="MuiTypography-root-1sxknfi MuiTypography-body2-d30tto Hook-inline-42z04s"
      style={
        Object {
          "marginRight": "4px",
        }
      }
    >
      Loooooooooooooooooooooooooooooooooong text
    </p>
    <div
      className="Hook-container-576ype"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="Hook-root-z8j3qi"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
]
`;

exports[`Storyshots Components Typography 1`] = `
Array [
  <h6
    className="MuiTypography-root-1sxknfi MuiTypography-subtitle1-16yzjqn MuiTypography-colorPrimary-qfkzyz"
  >
    H4
  </h6>,
  <h4
    className="MuiTypography-root-1sxknfi MuiTypography-h4-nwn03d"
  >
    Main headings
  </h4>,
  <h6
    className="MuiTypography-root-1sxknfi MuiTypography-subtitle1-16yzjqn MuiTypography-colorPrimary-qfkzyz"
  >
    H5
  </h6>,
  <h5
    className="MuiTypography-root-1sxknfi MuiTypography-h5-1mlw3i1"
  >
    Heading 2
  </h5>,
  <h6
    className="MuiTypography-root-1sxknfi MuiTypography-subtitle1-16yzjqn MuiTypography-colorPrimary-qfkzyz"
  >
    H6
  </h6>,
  <h6
    className="MuiTypography-root-1sxknfi MuiTypography-h6-d7gx89"
  >
    Subheading
  </h6>,
  <h6
    className="MuiTypography-root-1sxknfi MuiTypography-subtitle1-16yzjqn MuiTypography-colorPrimary-qfkzyz"
  >
    body1
  </h6>,
  <p
    className="MuiTypography-root-1sxknfi MuiTypography-body1-1gdw1oo"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-1sxknfi MuiTypography-subtitle1-16yzjqn MuiTypography-colorPrimary-qfkzyz"
  >
    body2
  </h6>,
  <p
    className="MuiTypography-root-1sxknfi MuiTypography-body2-d30tto"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-1sxknfi MuiTypography-subtitle1-16yzjqn MuiTypography-colorPrimary-qfkzyz"
  >
    subtitle1
  </h6>,
  <h6
    className="MuiTypography-root-1sxknfi MuiTypography-subtitle1-16yzjqn"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-1sxknfi MuiTypography-subtitle1-16yzjqn MuiTypography-colorPrimary-qfkzyz"
  >
    subtitle2
  </h6>,
  <h6
    className="MuiTypography-root-1sxknfi MuiTypography-subtitle2-1ldifqj"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-1sxknfi MuiTypography-subtitle1-16yzjqn MuiTypography-colorPrimary-qfkzyz"
  >
    Inline styles
  </h6>,
  <h6
    className="MuiTypography-root-1sxknfi MuiTypography-subtitle2-1ldifqj MuiTypography-colorPrimary-qfkzyz Hook-inline-42z04s"
  >
    First part of the text. 
  </h6>,
  <h6
    className="MuiTypography-root-1sxknfi MuiTypography-subtitle2-1ldifqj Hook-inline-42z04s"
  >
    Second part of the text.
  </h6>,
]
`;

exports[`Storyshots Routes/Signup New account page 1`] = `
<div
  className="MuiBox-root-svhlhv MuiBox-root-25"
  id="/signup1"
>
  <h4
    className="MuiTypography-root-1sxknfi MuiTypography-h4-nwn03d MuiTypography-colorPrimary-qfkzyz Hook-inline-42z04s"
  >
    New
  </h4>
  <h4
    className="MuiTypography-root-1sxknfi MuiTypography-h4-nwn03d Hook-inline-42z04s"
  >
     
    Account
  </h4>
  <div
    className="MuiBox-root-svhlhv MuiBox-root-26"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-svhlhv MuiBox-root-27"
      >
        <div
          className="MuiFormControl-root-1lb2h3b MuiFormControl-marginNormal-16ii0gj MuiFormControl-fullWidth-179vbl1 MuiTextField-root-mb0tze"
        >
          <label
            className="MuiFormLabel-root-n2ir1z MuiFormLabel-required-ezb1gc MuiInputLabel-required-ezb1gc MuiInputLabel-root-u7lks3 MuiInputLabel-formControl-aiu6j8 MuiInputLabel-animated-1574dhs MuiInputLabel-shrink-3h2s6v"
            data-shrink={true}
          >
            Account name
            <span
              className="MuiFormLabel-asterisk-xu58vc MuiInputLabel-asterisk-qgg8x1"
            >
               *
            </span>
          </label>
          <div
            className="MuiInputBase-root-91sko6 MuiOutlinedInput-root-9m06ak MuiInputBase-fullWidth-179vbl1 MuiInputBase-formControl-1c83dgn"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-nlmqld MuiOutlinedInput-notchedOutline-myv9y8"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-soq3fn"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-1dda7s5 MuiOutlinedInput-input-1lq6gfk"
              disabled={false}
              name="accountNameField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Account name"
              required={true}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-svhlhv MuiBox-root-28"
      >
        <div
          className="MuiFormControl-root-1lb2h3b MuiFormControl-marginNormal-16ii0gj MuiFormControl-fullWidth-179vbl1 MuiTextField-root-mb0tze"
        >
          <label
            className="MuiFormLabel-root-n2ir1z MuiFormLabel-required-ezb1gc MuiInputLabel-required-ezb1gc MuiInputLabel-root-u7lks3 MuiInputLabel-formControl-aiu6j8 MuiInputLabel-animated-1574dhs MuiInputLabel-shrink-3h2s6v"
            data-shrink={true}
          >
            Password
            <span
              className="MuiFormLabel-asterisk-xu58vc MuiInputLabel-asterisk-qgg8x1"
            >
               *
            </span>
          </label>
          <div
            className="MuiInputBase-root-91sko6 MuiOutlinedInput-root-9m06ak MuiInputBase-fullWidth-179vbl1 MuiInputBase-formControl-1c83dgn"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-nlmqld MuiOutlinedInput-notchedOutline-myv9y8"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-soq3fn"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-1dda7s5 MuiOutlinedInput-input-1lq6gfk MuiInputBase-inputType-k4bipw"
              disabled={false}
              name="passwordInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-svhlhv MuiBox-root-29"
      >
        <div
          className="MuiFormControl-root-1lb2h3b MuiFormControl-marginNormal-16ii0gj MuiFormControl-fullWidth-179vbl1 MuiTextField-root-mb0tze"
        >
          <label
            className="MuiFormLabel-root-n2ir1z MuiFormLabel-required-ezb1gc MuiInputLabel-required-ezb1gc MuiInputLabel-root-u7lks3 MuiInputLabel-formControl-aiu6j8 MuiInputLabel-animated-1574dhs MuiInputLabel-shrink-3h2s6v"
            data-shrink={true}
          >
            Confirm Password
            <span
              className="MuiFormLabel-asterisk-xu58vc MuiInputLabel-asterisk-qgg8x1"
            >
               *
            </span>
          </label>
          <div
            className="MuiInputBase-root-91sko6 MuiOutlinedInput-root-9m06ak MuiInputBase-fullWidth-179vbl1 MuiInputBase-formControl-1c83dgn"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-nlmqld MuiOutlinedInput-notchedOutline-myv9y8"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-soq3fn"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-1dda7s5 MuiOutlinedInput-input-1lq6gfk MuiInputBase-inputType-k4bipw"
              disabled={false}
              name="passwordConfirmInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Confirm Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-svhlhv MuiBox-root-30"
      >
        <div
          className="MuiBox-root-svhlhv MuiBox-root-31"
        >
          <button
            className="MuiButtonBase-root-131ecbq MuiButton-root-1oszgoi MuiButton-text-c3bwcw MuiButton-textPrimary-1rm8cpj MuiButton-fullWidth-179vbl1"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-10pi21n"
            >
              Back
            </span>
            <span
              className="MuiTouchRipple-root-zm8jaa"
            />
          </button>
        </div>
        <div
          className="MuiBox-root-svhlhv MuiBox-root-32"
        >
          <button
            className="MuiButtonBase-root-131ecbq MuiButtonBase-disabled-1v65d5t MuiButton-root-1oszgoi MuiButton-contained-1akh65 MuiButton-containedPrimary-z7qkqq MuiButton-disabled-1v65d5t MuiButton-fullWidth-179vbl1"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="submit"
          >
            <span
              className="MuiButton-label-10pi21n"
            >
              Continue
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-svhlhv MuiBox-root-33"
  >
    <img
      alt="IOV logo"
      className="Hook-root-z8j3qi"
      src="iov-logo.png"
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Recovery Phrase page 1`] = `
<div
  className="MuiBox-root-svhlhv MuiBox-root-34"
  id="/signup2"
>
  <h4
    className="MuiTypography-root-1sxknfi MuiTypography-h4-nwn03d MuiTypography-colorPrimary-qfkzyz Hook-inline-42z04s"
  >
    New
  </h4>
  <h4
    className="MuiTypography-root-1sxknfi MuiTypography-h4-nwn03d Hook-inline-42z04s"
  >
     
    Account
  </h4>
  <div
    className="MuiBox-root-svhlhv MuiBox-root-35"
  >
    <div
      className="MuiBox-root-svhlhv MuiBox-root-36"
    >
      <div
        className="MuiBox-root-svhlhv MuiBox-root-37"
      >
        <div
          className="MuiBox-root-svhlhv MuiBox-root-38"
        >
          <h6
            className="MuiTypography-root-1sxknfi MuiTypography-subtitle2-1ldifqj Hook-inline-42z04s"
          >
            Activate Recovery Phrase?
          </h6>
        </div>
        <div
          className="Hook-container-576ype"
          onClick={[Function]}
        >
          <img
            alt="Info"
            className="Hook-root-z8j3qi"
            height={16}
            src="info_normal.svg"
            width={16}
          />
        </div>
      </div>
      <label
        className="MuiFormControlLabel-root-gncncm"
      >
        <span
          className="MuiSwitch-root-1r26fum"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root-131ecbq MuiIconButton-root-twwo1r MuiPrivateSwitchBase-root-1fy6mq0 MuiSwitch-switchBase-1njpanh MuiSwitch-colorPrimary-18cp1gd"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label-fojb9y"
            >
              <span
                className="MuiSwitch-icon-4n1pz8"
              />
              <input
                className="MuiPrivateSwitchBase-input-1kb1x60"
                onChange={[Function]}
                type="checkbox"
              />
            </span>
            <span
              className="MuiTouchRipple-root-zm8jaa"
            />
          </span>
          <span
            className="MuiSwitch-bar-tufax1"
          />
        </span>
        <span
          className="MuiTypography-root-1sxknfi MuiTypography-body2-d30tto MuiFormControlLabel-label-10nbetz"
        />
      </label>
    </div>
    <div
      className="MuiBox-root-svhlhv MuiBox-root-39"
    >
      <p
        className="MuiTypography-root-1sxknfi MuiTypography-body1-1gdw1oo Hook-inline-42z04s"
      >
        
      </p>
    </div>
    <div
      className="MuiBox-root-svhlhv MuiBox-root-40"
    >
      <div
        className="MuiBox-root-svhlhv MuiBox-root-41"
      >
        <button
          className="MuiButtonBase-root-131ecbq MuiButton-root-1oszgoi MuiButton-text-c3bwcw MuiButton-textPrimary-1rm8cpj MuiButton-fullWidth-179vbl1"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-10pi21n"
          >
            Back
          </span>
          <span
            className="MuiTouchRipple-root-zm8jaa"
          />
        </button>
      </div>
      <div
        className="MuiBox-root-svhlhv MuiBox-root-42"
      >
        <button
          className="MuiButtonBase-root-131ecbq MuiButton-root-1oszgoi MuiButton-contained-1akh65 MuiButton-containedPrimary-z7qkqq MuiButton-fullWidth-179vbl1"
          disabled={false}
          id="continue-to-hint-button"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-10pi21n"
          >
            Continue
          </span>
          <span
            className="MuiTouchRipple-root-zm8jaa"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-svhlhv MuiBox-root-43"
  >
    <img
      alt="IOV logo"
      className="Hook-root-z8j3qi"
      src="iov-logo.png"
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Security hint page 1`] = `
<div
  className="MuiBox-root-svhlhv MuiBox-root-44"
  id="/signup3"
>
  <h4
    className="MuiTypography-root-1sxknfi MuiTypography-h4-nwn03d MuiTypography-colorPrimary-qfkzyz Hook-inline-42z04s"
  >
    New
  </h4>
  <h4
    className="MuiTypography-root-1sxknfi MuiTypography-h4-nwn03d Hook-inline-42z04s"
  >
     
    Account
  </h4>
  <div
    className="MuiBox-root-svhlhv MuiBox-root-45"
  >
    <h6
      className="MuiTypography-root-1sxknfi MuiTypography-subtitle2-1ldifqj Hook-inline-42z04s"
    >
      To help you remember your details in the future please provide a security hint:
    </h6>
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-svhlhv MuiBox-root-46"
      >
        <div
          className="MuiFormControl-root-1lb2h3b MuiFormControl-marginNormal-16ii0gj MuiFormControl-fullWidth-179vbl1 MuiTextField-root-mb0tze"
        >
          <div
            className="MuiInputBase-root-91sko6 MuiOutlinedInput-root-9m06ak MuiInputBase-fullWidth-179vbl1 MuiInputBase-formControl-1c83dgn"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-nlmqld MuiOutlinedInput-notchedOutline-myv9y8"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-soq3fn"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-1dda7s5 MuiOutlinedInput-input-1lq6gfk"
              disabled={false}
              name="securityHintField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Security hint"
              required={false}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-svhlhv MuiBox-root-47"
      >
        <div
          className="MuiBox-root-svhlhv MuiBox-root-48"
        >
          <button
            className="MuiButtonBase-root-131ecbq MuiButton-root-1oszgoi MuiButton-text-c3bwcw MuiButton-textPrimary-1rm8cpj MuiButton-fullWidth-179vbl1"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-10pi21n"
            >
              Back
            </span>
            <span
              className="MuiTouchRipple-root-zm8jaa"
            />
          </button>
        </div>
        <div
          className="MuiBox-root-svhlhv MuiBox-root-49"
        >
          <button
            className="MuiButtonBase-root-131ecbq MuiButton-root-1oszgoi MuiButton-contained-1akh65 MuiButton-containedPrimary-z7qkqq MuiButton-fullWidth-179vbl1"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="submit"
          >
            <span
              className="MuiButton-label-10pi21n"
            >
              Create
            </span>
            <span
              className="MuiTouchRipple-root-zm8jaa"
            />
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-svhlhv MuiBox-root-50"
  >
    <img
      alt="IOV logo"
      className="Hook-root-z8j3qi"
      src="iov-logo.png"
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Welcome Welcome page 1`] = `
<div
  className="MuiBox-root-svhlhv MuiBox-root-51"
  id="/welcome"
>
  <h4
    className="MuiTypography-root-1sxknfi MuiTypography-h4-nwn03d MuiTypography-colorPrimary-qfkzyz Hook-inline-42z04s"
  >
    Welcome
  </h4>
  <h4
    className="MuiTypography-root-1sxknfi MuiTypography-h4-nwn03d Hook-inline-42z04s"
  >
     to your IOV manager
  </h4>
  <div
    className="MuiBox-root-svhlhv MuiBox-root-52"
  >
    <p
      className="MuiTypography-root-1sxknfi MuiTypography-body1-1gdw1oo Hook-inline-42z04s"
    >
      This plugin lets you manage all your accounts in one place.
    </p>
    <div
      className="MuiBox-root-svhlhv MuiBox-root-53"
    />
    <button
      className="MuiButtonBase-root-131ecbq MuiButton-root-1oszgoi MuiButton-contained-1akh65 MuiButton-containedPrimary-z7qkqq MuiButton-fullWidth-179vbl1"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="contained"
    >
      <span
        className="MuiButton-label-10pi21n"
      >
        Log in
      </span>
      <span
        className="MuiTouchRipple-root-zm8jaa"
      />
    </button>
    <div
      className="MuiBox-root-svhlhv MuiBox-root-54"
    />
    <button
      className="MuiButtonBase-root-131ecbq MuiButton-root-1oszgoi MuiButton-contained-1akh65 MuiButton-containedPrimary-z7qkqq MuiButton-fullWidth-179vbl1"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="contained"
    >
      <span
        className="MuiButton-label-10pi21n"
      >
        New account
      </span>
      <span
        className="MuiTouchRipple-root-zm8jaa"
      />
    </button>
    <div
      className="MuiBox-root-svhlhv MuiBox-root-55"
    />
    <button
      className="MuiButtonBase-root-131ecbq MuiButton-root-1oszgoi MuiButton-contained-1akh65 MuiButton-containedPrimary-z7qkqq MuiButton-fullWidth-179vbl1"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="contained"
    >
      <span
        className="MuiButton-label-10pi21n"
      >
        Import account
      </span>
      <span
        className="MuiTouchRipple-root-zm8jaa"
      />
    </button>
  </div>
  <div
    className="MuiBox-root-svhlhv MuiBox-root-56"
  >
    <img
      alt="IOV logo"
      className="Hook-root-z8j3qi"
      src="iov-logo.png"
    />
  </div>
</div>
`;
